--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "gen:data": "tsx scripts/generate-demo-data.ts",
     "bench": "tsx scripts/perf-bench.ts",
     "scenarios": "tsx scripts/scenario-runner.ts",
-    "preview:browser": "npx http-server . -p 8080 -c-1 --open examples/browser-demo.html"
+    "preview:browser": "npx http-server . -p 8080 -c-1 --open examples/browser-demo.html",
+    "build:utterances": "tsx scripts/build-utterance-dictionary.ts"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
+    "csv-parse": "^6.1.0",
     "http-server": "^14.1.1",
     "tsx": "^4.19.0",
     "typescript": "^5.6.3",
